--- a/style.css
+++ b/style.css
@@ -38,170 +38,13 @@ body {
     font-size: 13px !important;
 }
 
-/* Linea de tiempo */
-.container .navbar {
-    justify-content: center;
-}
-.container .navbar,.timeline {
-    font-family: 'Roboto Slab', serif !important;
-}
-.container .navbar h2 {
-    font-family: 'Roboto Slab', serif !important;
-    font-size: 50px;
-    margin-bottom: 50px;
-    margin-right: 30px;
-    padding-top: 50px;
-    color: black;
-}
-.main-timeline5 {
-    overflow: hidden;
-    position: relative;
-}
-.main-timeline5 .timeline {
-    position: relative;
-    margin-top: -85px;
-}
-.main-timeline5 .timeline:first-child {
-    margin-top: 0;
-}
-.main-timeline5 .timeline-icon,.main-timeline5 .year {
-    margin: auto;
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-}
-.main-timeline5 .timeline:after,.main-timeline5 .timeline:before {
-    content: "";
-    display: block;
-    width: 100%;
-    clear: both;
-}
-.main-timeline5 .timeline:before {
-    content: "";
-    width: 100%;
-    height: 100%;
-    box-shadow: -5px 0 5px -5px rgba(0,0,0,.5) inset;
-    position: absolute;
-    top: 0;
-    right: 0;
-    z-index: 2;
-}
-.main-timeline5 .timeline-icon {
-    width: 210px;
-    height: 210px;
-    border-radius: 50%;
-    border: 25px solid transparent;
-    border-top-color: #6CACE4;
-    border-right-color: #6CACE4;
-    z-index: 1;
-    transform: rotate(45deg);
-}
-.main-timeline5 .year {
-    display: block;
-    width: 110px;
-    height: 110px;
-    line-height: 110px;
-    border-radius: 50%;
-    background: #fff;
-    box-shadow: 0 0 20px rgba(0,0,0,.4);
-    font-size: 35px;
-    font-weight: 700;
-    color: #6CACE4;
-    text-align: center;
-    transform: rotate(-45deg);
-}
-.main-timeline5 .timeline-content {
-    width: 35%;
-    float: right;
-    background: #6CACE4;
-    padding: 30px 20px;
-    margin: 50px 0;
-    z-index: 1;
-    position: relative;
-}
-.main-timeline5 .timeline-content:before {
-    content: "";
-    width: 20%;
-    height: 45px;
-    background: #6CACE4;
-    position: absolute;
-    top: 50%;
-    left: -20%;
-    z-index: -1;
-    transform: translateY(-50%);
-}
-.main-timeline5 .title {
-    text-align: center;
-    font-size: 20px;
-    font-weight: 700;
-    color: #fff;
-    margin: 0 0 10px;
-}
-.main-timeline5 .description {
-    font-size: 15px;
-    color: #fff;
-    line-height: 24px;
-    margin: 0;
-}
-.main-timeline5 .timeline:nth-child(2n):before {
-    box-shadow: 5px 0 5px -5px rgba(0,0,0,.5) inset;
-}
-.main-timeline5 .timeline:nth-child(2n) .timeline-icon {
-    transform: rotate(-135deg);
-    border-top-color: #105572;
-    border-right-color: #105572;
-}
-.main-timeline5 .timeline:nth-child(2n) .year {
-    transform: rotate(135deg);
-    color: #105572;
-}
-.main-timeline5 .timeline:nth-child(2n) .timeline-content {
-    float: left;
-}
-.main-timeline5 .timeline:nth-child(2n) .timeline-content:before {
-    left: auto;
-    right: -20%;
-}
-.main-timeline5 .timeline:nth-child(2n) .timeline-content,.main-timeline5 .timeline:nth-child(2n) .timeline-content:before {
-    background: #105572;
-}
-.main-timeline5 .timeline:nth-child(3n) .timeline-icon {
-    border-top-color: #6CACE4;
-    border-right-color: #6CACE4;
-}
-.main-timeline5 .timeline:nth-child(3n) .year {
-    color: #6CACE4;
-}
-.main-timeline5 .timeline:nth-child(3n) .timeline-content,.main-timeline5 .timeline:nth-child(3n) .timeline-content:before {
-    background: #6CACE4;
-}
-.main-timeline5 .timeline:nth-child(4n) .timeline-icon {
-    border-top-color: #105572;
-    border-right-color: #105572;
-}
-.main-timeline5 .timeline:nth-child(4n) .year {
-    color: #105572;
-}
-.main-timeline5 .timeline:nth-child(4n) .timeline-content,.main-timeline5 .timeline:nth-child(4n) .timeline-content:before {
-    background: #105572;
+/* Cards hoteles */
+.card-hotel .card-body a {
+    text-decoration: none;
 }
 
-@media only screen and (max-width:1199px){.main-timeline5 .timeline{margin-top:-103px}
-.main-timeline5 .timeline-content:before{left:-18%}
-.main-timeline5 .timeline:nth-child(2n) .timeline-content:before{right:-18%}
-}
-@media only screen and (max-width:990px){.main-timeline5 .timeline{margin-top:-127px}
-.main-timeline5 .timeline-content:before{left:-2%}
-.main-timeline5 .timeline:nth-child(2n) .timeline-content:before{right:-2%}
-}
-@media only screen and (max-width:767px){.main-timeline5 .timeline{margin-top:0;overflow:hidden}
-.main-timeline5 .timeline:before,.main-timeline5 .timeline:nth-child(2n):before{box-shadow:none}
-.main-timeline5 .timeline-icon,.main-timeline5 .timeline:nth-child(2n) .timeline-icon{margin-top:-30px;margin-bottom:20px;position:relative;transform:rotate(135deg)}
-.main-timeline5 .timeline:nth-child(2n) .year,.main-timeline5 .year{transform:rotate(-135deg)}
-.main-timeline5 .timeline-content,.main-timeline5 .timeline:nth-child(2n) .timeline-content{width:100%;float:none;border-radius:0 0 20px 20px;text-align:center;padding:25px 20px;margin:0 auto}
-.main-timeline5 .timeline-content:before,.main-timeline5 .timeline:nth-child(2n) .timeline-content:before{width:15px;height:25px;position:absolute;top:-22px;left:50%;z-index:-1;transform:translate(-50%,0)}
+.card-hotel .card-body a:hover {
+    color: darkblue;
 }
 
 /* Nuestro equipo1 */
@@ -327,3 +170,10 @@ address {
     font-size: 12px !important;
 }
 
+footer .row a {
+    text-decoration: none;
+}
+
+.row .fab:hover {
+    color: darkblue;
+}
